--- a/views/public/stylesheets/app.css
+++ b/views/public/stylesheets/app.css
@@ -14,3 +14,12 @@
 #description{
     padding : 15px;
 }
+#input1 {
+    width: 30%;
+}
+#input2  {
+    width: 30%;
+}
+#form-group {
+    align-content: center;
+}
