--- a/views/register.ejs
+++ b/views/register.ejs
@@ -1,9 +1,16 @@
 <% include ./partials/header.ejs %>
 
-<form action="/register" method="POST">
-    <input type="text" name="username" placeholder="username">
-    <input type="password" name="password" placeholder="password">
-    <button>Sign Up</button>
-</form>
+<div class="container">
+    <form action="/register" method="POST">
+        <div class="form-group" id="form-group">
+            <input class="form-control" id="input1" type="text" name="username" placeholder="username">
+        </div>
+        <div class="form-group">
+            <input class="form-control" id="input2" type="password" name="password" placeholder="password">
+        </div>  
+        <button>Sign Up</button>
+    </form>
+</div>
+
 
 <% include ./partials/footer.ejs %>
